[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Objects/GrassEffect.png" type="Texture" id=1]
[ext_resource path="res://assets/Objects/Bush.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Objects/Grass.png" type="Texture" id=4]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/grass.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.0
height = 6.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Destroyed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 6.4375 )

[node name="Bush" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 1.03125, 0.9375 )
frames = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 10 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, -9.5625 )
shape = SubResource( 2 )

[node name="DestroyedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -40.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
